rosPart/log/build_2024-06-22_22-29-09/robotController/stderr.log
  File "/home/mik/robotica2/Project_Robotica/rosPart/install/robotController/lib/python3.10/site-packages/robotController/camera_control.py", line 8
    class CameraControl(Node)
                             ^
SyntaxError: expected ':'

